[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/UI/PowerUpsPanel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/LevelSelectMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/UI/PowerUpPanel.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/BurgerMenuIcon.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/RestartIcon.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/SFXIcon.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/RedBar.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/MusicIcon.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UI/QuitButton.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.332031, 0.309618, 0.127106, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.46875, 0.409856, 0.140991, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.503906, 0.457157, 0.204712, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[node name="PowerUpsPanel" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="LevelSelectMenu" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 1197, 1100 )

[node name="PowerUpPanel" type="Sprite" parent="." index="1"]

position = Vector2( 625.949, 695.131 )
rotation = -1.5708
scale = Vector2( 1, 2.31943 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="PowerUpControls" type="Position2D" parent="." index="2"]

position = Vector2( 217.429, 644.706 )
_sections_unfolded = [ "Transform" ]

[node name="LevelSelectButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1093.0
margin_top = 602.0
margin_right = 1137.0
margin_bottom = 642.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Mouse", "custom_styles" ]

[node name="BurgerMenuIcon" type="Sprite" parent="LevelSelectButton" index="0"]

position = Vector2( 21.761, 19.3525 )
scale = Vector2( 0.790513, 0.944147 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="RestartButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1094.0
margin_top = 645.0
margin_right = 1138.0
margin_bottom = 685.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Mouse", "custom_styles" ]

[node name="RestartIcon" type="Sprite" parent="RestartButton" index="0"]

position = Vector2( 20.2296, 19.677 )
scale = Vector2( 0.426684, 0.426684 )
texture = ExtResource( 5 )

[node name="MuteSFX" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1154.0
margin_top = 602.0
margin_right = 1198.0
margin_bottom = 642.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Mouse", "custom_styles" ]

[node name="RestartIcon" type="Sprite" parent="MuteSFX" index="0"]

position = Vector2( 20.2296, 19.677 )
scale = Vector2( 0.426684, 0.426684 )
texture = ExtResource( 6 )

[node name="RedBar" type="Sprite" parent="MuteSFX" index="1"]

visible = false
position = Vector2( 22.2771, 19.4031 )
rotation = -0.755262
scale = Vector2( 1, 0.734139 )
texture = ExtResource( 7 )

[node name="MuteMusic" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1202.0
margin_top = 602.0
margin_right = 1246.0
margin_bottom = 642.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Mouse", "custom_styles" ]

[node name="RestartIcon" type="Sprite" parent="MuteMusic" index="0"]

position = Vector2( 20.2296, 19.677 )
scale = Vector2( 0.426684, 0.426684 )
texture = ExtResource( 8 )

[node name="RedBar" type="Sprite" parent="MuteMusic" index="1"]

visible = false
position = Vector2( 21.1553, 18.2408 )
rotation = -0.755262
scale = Vector2( 1, 0.734139 )
texture = ExtResource( 7 )

[node name="QuitButton" parent="." index="7" instance=ExtResource( 9 )]


